update domestic